Remove upstart for tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ install:
   - if [ "$ANSIBLE_VERSION" = "latest" ]; then pip install ansible; else pip install ansible==$ANSIBLE_VERSION; fi
   - if [ "$ANSIBLE_VERSION" = "latest" ]; then pip install ansible-lint; fi
 
+  - sudo apt-get remove upstart -qq
   - sudo apt-get install systemd dbus -qq
 
 script:
