--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,8 @@ script:
   # Run the role/playbook with ansible-playbook.
   - ansible-playbook -i tests/inventory tests/test.yml -vvv
 
+  - systemd is-active mailhog
+
   # check mailhog is listening
   - curl localhost:8025
 
