Update galaxy info

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: ndench
-  description: your description
+  description: Email catcher for dev environments
   company: DingoPM
   license: license MIT
 
