--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ script:
   # Run the role/playbook with ansible-playbook.
   - ansible-playbook -i tests/inventory tests/test.yml -vvv
 
-  - systemd is-active mailhog
+  - sudo systemd is-active mailhog
 
   # check mailhog is listening
   - curl localhost:8025
