--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ python: "3.6"
 # Doc: https://docs.travis-ci.com/user/customizing-the-build#Build-Matrix
 env:
   - ANSIBLE_VERSION=latest
-    #  - ANSIBLE_VERSION=2.4
-    #  - ANSIBLE_VERSION=2.3
-    #  - ANSIBLE_VERSION=2.2
-    #  - ANSIBLE_VERSION=2.1
-    #  - ANSIBLE_VERSION=2.0
-    #  - ANSIBLE_VERSION=1.9
+  - ANSIBLE_VERSION=2.4
+  - ANSIBLE_VERSION=2.3
+  - ANSIBLE_VERSION=2.2
+  - ANSIBLE_VERSION=2.1
+  - ANSIBLE_VERSION=2.0
+  - ANSIBLE_VERSION=1.9
 
 branches:
   only:
@@ -35,8 +35,6 @@ script:
 
   # Run the role/playbook with ansible-playbook.
   - ansible-playbook -i tests/inventory tests/test.yml -vvv
-
-  - sudo systemd status mailhog
 
   # check mailhog is listening
   - curl localhost:8025
